--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,6 @@
   "cli": {
     "defaultCollection": "@nrwl/angular"
   },
-  "defaultProject": "catalog",
   "schematics": {
     "@nrwl/angular": {
       "application": {
@@ -31,120 +30,5 @@
       "style": "css"
     }
   },
-  "projects": {
-    "catalog": {
-      "projectType": "application",
-      "root": "apps/catalog",
-      "sourceRoot": "apps/catalog/src",
-      "prefix": "altia2",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist/apps/catalog",
-            "index": "apps/catalog/src/index.html",
-            "main": "apps/catalog/src/main.ts",
-            "polyfills": "apps/catalog/src/polyfills.ts",
-            "tsConfig": "apps/catalog/tsconfig.app.json",
-            "aot": true,
-            "assets": [
-              "apps/catalog/src/favicon.ico",
-              "apps/catalog/src/assets"
-            ],
-            "styles": ["apps/catalog/src/styles.css"],
-            "scripts": []
-          },
-          "configurations": {
-            "production": {
-              "fileReplacements": [
-                {
-                  "replace": "apps/catalog/src/environments/environment.ts",
-                  "with": "apps/catalog/src/environments/environment.prod.ts"
-                }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
-                }
-              ]
-            }
-          }
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "catalog:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "catalog:build:production"
-            }
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "catalog:build"
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "options": {
-            "lintFilePatterns": [
-              "apps/catalog/src/**/*.ts",
-              "apps/catalog/src/**/*.html"
-            ]
-          }
-        },
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/catalog"],
-          "options": {
-            "jestConfig": "apps/catalog/jest.config.js",
-            "passWithNoTests": true
-          }
-        }
-      }
-    },
-    "catalog-e2e": {
-      "root": "apps/catalog-e2e",
-      "sourceRoot": "apps/catalog-e2e/src",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@nrwl/cypress:cypress",
-          "options": {
-            "cypressConfig": "apps/catalog-e2e/cypress.json",
-            "tsConfig": "apps/catalog-e2e/tsconfig.e2e.json",
-            "devServerTarget": "catalog:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "catalog:serve:production"
-            }
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "options": {
-            "lintFilePatterns": ["apps/catalog-e2e/**/*.{js,ts}"]
-          }
-        }
-      }
-    }
-  }
+  "projects": {}
 }
