--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,8 @@
       "style": "css",
       "linter": "eslint",
       "unitTestRunner": "jest",
-      "e2eTestRunner": "cypress"
+      "e2eTestRunner": "cypress",
+      "strict": true
     },
     "@nrwl/angular:library": {
       "style": "css",
@@ -30,5 +31,121 @@
       "style": "css"
     }
   },
-  "projects": {}
+  "projects": {
+    "catalog-web": {
+      "projectType": "application",
+      "root": "apps/catalog-web",
+      "sourceRoot": "apps/catalog-web/src",
+      "prefix": "ab",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/apps/catalog-web",
+            "index": "apps/catalog-web/src/index.html",
+            "main": "apps/catalog-web/src/main.ts",
+            "polyfills": "apps/catalog-web/src/polyfills.ts",
+            "tsConfig": "apps/catalog-web/tsconfig.app.json",
+            "aot": true,
+            "assets": [
+              "apps/catalog-web/src/favicon.ico",
+              "apps/catalog-web/src/assets"
+            ],
+            "styles": ["apps/catalog-web/src/styles.css"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/catalog-web/src/environments/environment.ts",
+                  "with": "apps/catalog-web/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "catalog-web:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "catalog-web:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "catalog-web:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "apps/catalog-web/src/**/*.ts",
+              "apps/catalog-web/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/catalog-web"],
+          "options": {
+            "jestConfig": "apps/catalog-web/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "catalog-web-e2e": {
+      "root": "apps/catalog-web-e2e",
+      "sourceRoot": "apps/catalog-web-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/catalog-web-e2e/cypress.json",
+            "tsConfig": "apps/catalog-web-e2e/tsconfig.e2e.json",
+            "devServerTarget": "catalog-web:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "catalog-web:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["apps/catalog-web-e2e/**/*.{js,ts}"]
+          }
+        }
+      }
+    }
+  },
+  "defaultProject": "catalog-web"
 }
