--- a/nx.json
+++ b/nx.json
@@ -17,6 +17,9 @@
   },
   "projects": {
     "catalog-web": { "tags": [] },
-    "catalog-web-e2e": { "tags": [], "implicitDependencies": ["catalog-web"] }
+    "catalog-web-e2e": { "tags": [], "implicitDependencies": ["catalog-web"] },
+    "domain-home": { "tags": ["domain", "route--dry-run"] },
+    "shared-data": { "tags": ["shared", "data"] },
+    "shared-ui": { "tags": ["shared", "ui"] }
   }
 }
