--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@ab/home": ["libs/domain/home/src/index.ts"],
       "@ab/data": ["libs/shared/data/src/index.ts"],
-      "@ab/ui": ["libs/shared/ui/src/index.ts"]
+      "@ab/ui": ["libs/shared/ui/src/index.ts"],
+      "@ab/models": ["libs/shared/models/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
