--- a/angular.json
+++ b/angular.json
@@ -61,9 +61,7 @@
               "apps/catalog-web/src/favicon.ico",
               "apps/catalog-web/src/assets"
             ],
-            "styles": [
-              "apps/catalog-web/src/styles.css"
-            ],
+            "styles": ["apps/catalog-web/src/styles.css"],
             "scripts": []
           },
           "configurations": {
@@ -124,9 +122,7 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/apps/catalog-web"
-          ],
+          "outputs": ["coverage/apps/catalog-web"],
           "options": {
             "jestConfig": "apps/catalog-web/jest.config.js",
             "passWithNoTests": true
@@ -155,9 +151,7 @@
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": [
-              "apps/catalog-web-e2e/**/*.{js,ts}"
-            ]
+            "lintFilePatterns": ["apps/catalog-web-e2e/**/*.{js,ts}"]
           }
         }
       }
@@ -191,9 +185,7 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/domain/home"
-          ],
+          "outputs": ["coverage/libs/domain/home"],
           "options": {
             "jestConfig": "libs/domain/home/jest.config.js",
             "passWithNoTests": true
@@ -230,9 +222,7 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/shared/data"
-          ],
+          "outputs": ["coverage/libs/shared/data"],
           "options": {
             "jestConfig": "libs/shared/data/jest.config.js",
             "passWithNoTests": true
@@ -269,11 +259,46 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/shared/ui"
-          ],
+          "outputs": ["coverage/libs/shared/ui"],
           "options": {
             "jestConfig": "libs/shared/ui/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "domain-category": {
+      "projectType": "library",
+      "root": "libs/domain/category",
+      "sourceRoot": "libs/domain/category/src",
+      "prefix": "ab-category",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:ng-packagr-lite",
+          "options": {
+            "tsConfig": "libs/domain/category/tsconfig.lib.json",
+            "project": "libs/domain/category/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/domain/category/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/domain/category/src/**/*.ts",
+              "libs/domain/category/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/domain/category"],
+          "options": {
+            "jestConfig": "libs/domain/category/jest.config.js",
             "passWithNoTests": true
           }
         }
