--- a/nx.json
+++ b/nx.json
@@ -20,6 +20,7 @@
     "catalog-web-e2e": { "tags": [], "implicitDependencies": ["catalog-web"] },
     "domain-home": { "tags": ["domain", "route--dry-run"] },
     "shared-data": { "tags": ["shared", "data"] },
-    "shared-ui": { "tags": ["shared", "ui"] }
+    "shared-ui": { "tags": ["shared", "ui"] },
+    "domain-category": { "tags": ["domain", "category"] }
   }
 }
