--- a/angular.json
+++ b/angular.json
@@ -303,6 +303,80 @@
           }
         }
       }
+    },
+    "domain-search": {
+      "projectType": "library",
+      "root": "libs/domain/search",
+      "sourceRoot": "libs/domain/search/src",
+      "prefix": "ab-search",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:ng-packagr-lite",
+          "options": {
+            "tsConfig": "libs/domain/search/tsconfig.lib.json",
+            "project": "libs/domain/search/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/domain/search/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/domain/search/src/**/*.ts",
+              "libs/domain/search/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/domain/search"],
+          "options": {
+            "jestConfig": "libs/domain/search/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "domain-term-box": {
+      "projectType": "library",
+      "root": "libs/domain/term-box",
+      "sourceRoot": "libs/domain/term-box/src",
+      "prefix": "ab",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:ng-packagr-lite",
+          "options": {
+            "tsConfig": "libs/domain/term-box/tsconfig.lib.json",
+            "project": "libs/domain/term-box/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/domain/term-box/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/domain/term-box/src/**/*.ts",
+              "libs/domain/term-box/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/domain/term-box"],
+          "options": {
+            "jestConfig": "libs/domain/term-box/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
     }
   },
   "defaultProject": "catalog-web"
