--- a/nx.json
+++ b/nx.json
@@ -21,6 +21,8 @@
     "domain-home": { "tags": ["domain", "route--dry-run"] },
     "shared-data": { "tags": ["shared", "data"] },
     "shared-ui": { "tags": ["shared", "ui"] },
-    "domain-category": { "tags": ["domain", "category"] }
+    "domain-category": { "tags": ["domain", "category"] },
+    "domain-search": { "tags": ["domain", "search"] },
+    "domain-term-box": { "tags": [] }
   }
 }
