--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,16 @@
     "titleBar.inactiveBackground": "#007fff99",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#007fff"
+  "peacock.color": "#007fff",
+
+  "ngschematics.componentTypes": [
+    {
+      "label": "🔲 Widget",
+      "options": [
+        ["exports", "true"],
+        ["type", "Widget"]
+      ],
+      "detail": "Smart component, not asociated to a route"
+    }
+  ]
 }
