--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,7 +21,8 @@
       "@ab/models": ["libs/shared/models/index.ts"],
       "@ab/category": ["libs/domain/category/src/index.ts"],
       "@ab/search": ["libs/domain/search/src/index.ts"],
-      "@ab/termbox": ["libs/domain/term-box/src/index.ts"]
+      "@ab/termbox": ["libs/domain/term-box/src/index.ts"],
+      "@ab/audit": ["libs/domain/audit/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
