--- a/angular.json
+++ b/angular.json
@@ -414,6 +414,43 @@
           }
         }
       }
+    },
+    "domain-add-item": {
+      "projectType": "library",
+      "root": "libs/domain/add-item",
+      "sourceRoot": "libs/domain/add-item/src",
+      "prefix": "ab-addItem",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:ng-packagr-lite",
+          "options": {
+            "tsConfig": "libs/domain/add-item/tsconfig.lib.json",
+            "project": "libs/domain/add-item/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/domain/add-item/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/domain/add-item/src/**/*.ts",
+              "libs/domain/add-item/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/domain/add-item"],
+          "options": {
+            "jestConfig": "libs/domain/add-item/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
     }
   },
   "defaultProject": "catalog-web"
