--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,8 @@
 {
   "version": 1,
   "cli": {
-    "defaultCollection": "@nrwl/angular"
+    "defaultCollection": "@nrwl/angular",
+    "analytics": false
   },
   "schematics": {
     "@nrwl/angular": {
@@ -59,9 +60,12 @@
             "aot": true,
             "assets": [
               "apps/catalog-web/src/favicon.ico",
-              "apps/catalog-web/src/assets"
+              "apps/catalog-web/src/assets",
+              "apps/catalog-web/src/manifest.webmanifest"
             ],
-            "styles": ["apps/catalog-web/src/styles.css"],
+            "styles": [
+              "apps/catalog-web/src/styles.css"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -90,7 +94,9 @@
                   "maximumWarning": "6kb",
                   "maximumError": "10kb"
                 }
-              ]
+              ],
+              "serviceWorker": true,
+              "ngswConfigPath": "apps/catalog-web/ngsw-config.json"
             }
           }
         },
@@ -122,7 +128,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/catalog-web"],
+          "outputs": [
+            "coverage/apps/catalog-web"
+          ],
           "options": {
             "jestConfig": "apps/catalog-web/jest.config.js",
             "passWithNoTests": true
@@ -151,7 +159,9 @@
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": ["apps/catalog-web-e2e/**/*.{js,ts}"]
+            "lintFilePatterns": [
+              "apps/catalog-web-e2e/**/*.{js,ts}"
+            ]
           }
         }
       }
@@ -185,7 +195,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/domain/home"],
+          "outputs": [
+            "coverage/libs/domain/home"
+          ],
           "options": {
             "jestConfig": "libs/domain/home/jest.config.js",
             "passWithNoTests": true
@@ -222,7 +234,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/shared/data"],
+          "outputs": [
+            "coverage/libs/shared/data"
+          ],
           "options": {
             "jestConfig": "libs/shared/data/jest.config.js",
             "passWithNoTests": true
@@ -259,7 +273,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/shared/ui"],
+          "outputs": [
+            "coverage/libs/shared/ui"
+          ],
           "options": {
             "jestConfig": "libs/shared/ui/jest.config.js",
             "passWithNoTests": true
@@ -296,7 +312,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/domain/category"],
+          "outputs": [
+            "coverage/libs/domain/category"
+          ],
           "options": {
             "jestConfig": "libs/domain/category/jest.config.js",
             "passWithNoTests": true
@@ -333,7 +351,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/domain/search"],
+          "outputs": [
+            "coverage/libs/domain/search"
+          ],
           "options": {
             "jestConfig": "libs/domain/search/jest.config.js",
             "passWithNoTests": true
@@ -370,7 +390,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/domain/term-box"],
+          "outputs": [
+            "coverage/libs/domain/term-box"
+          ],
           "options": {
             "jestConfig": "libs/domain/term-box/jest.config.js",
             "passWithNoTests": true
@@ -407,7 +429,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/domain/audit"],
+          "outputs": [
+            "coverage/libs/domain/audit"
+          ],
           "options": {
             "jestConfig": "libs/domain/audit/jest.config.js",
             "passWithNoTests": true
@@ -444,7 +468,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/domain/add-item"],
+          "outputs": [
+            "coverage/libs/domain/add-item"
+          ],
           "options": {
             "jestConfig": "libs/domain/add-item/jest.config.js",
             "passWithNoTests": true
