--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "nx": "nx",
     "start": "ng serve -o",
     "build": "ng build",
+    "build:prod": "ng build --prod",
+    "start:pwa": "http-server -p 8022 -c-1 dist/apps/catalog-web",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
@@ -38,6 +40,7 @@
     "@angular/platform-browser": "^11.2.0",
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
+    "@angular/service-worker": "^11.2.0",
     "@nrwl/angular": "11.4.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
